--- a/app/src/main/res/layout/fragment_main_task.xml
+++ b/app/src/main/res/layout/fragment_main_task.xml
@@ -6,7 +6,8 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main_task_toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:elevation="0dp">
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/main_task_toolbar"
             android:layout_width="match_parent"
