--- a/app/src/main/res/layout/fragment_main_task_comments.xml
+++ b/app/src/main/res/layout/fragment_main_task_comments.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/light_pink">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,19 +15,24 @@
             android:orientation="horizontal"
             android:layout_margin="8dp">
         <ImageView
+            android:id="@+id/main_task_comments_attach"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:src="@drawable/ic_attach"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            app:tint="@color/light_blue"/>
         <EditText
+            android:id="@+id/main_task_comments_message_editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
         <ImageView
+            android:id="@+id/main_task_comments_send"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:src="@drawable/ic_send"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            app:tint="@color/light_blue" />
         </LinearLayout>
     </RelativeLayout>
 
