--- a/app/src/main/res/menu/action_bar_list_menu.xml
+++ b/app/src/main/res/menu/action_bar_list_menu.xml
@@ -7,6 +7,7 @@
         android:id="@+id/action_users"
         android:icon="@drawable/ic_group"
         android:title="@string/users"
+        app:iconTint="@color/light_pink"
         app:showAsAction="ifRoom"
         tools:targetApi="o" />
 
@@ -14,6 +15,7 @@
         android:id="@+id/action_sort"
         android:icon="@drawable/ic_sort"
         android:title="@string/sort"
+        app:iconTint="@color/light_pink"
         app:showAsAction="ifRoom"
         tools:targetApi="o" />
 
