--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="lighter_pink">#FFC2C2</color>
     <color name="grey">#C1C1C1</color>
     <color name="light_grey">#F0F0F0</color>
+    <color name="light_green">#E6F8EE</color>
     <color name="light_blue">#489CDC</color>
     <color name="beige">#E8CCA2</color>
     <color name="semi_transparent_black">#5E000000</color>
