--- a/app/src/main/res/layout/fragment_main_task.xml
+++ b/app/src/main/res/layout/fragment_main_task.xml
@@ -126,6 +126,7 @@
                 android:background="@color/grey"/>
 
             <RelativeLayout
+                android:id="@+id/main_task_addNote_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
