--- a/app/src/main/res/layout/fragment_main_task_note.xml
+++ b/app/src/main/res/layout/fragment_main_task_note.xml
@@ -15,6 +15,7 @@
             app:titleTextColor="@color/black"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:navigationIconTint="@color/black"
+            app:menu="@menu/action_bar_done_menu"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
     </com.google.android.material.appbar.AppBarLayout>
     <RelativeLayout
@@ -27,7 +28,7 @@
             android:layout_height="match_parent"
             android:hint="@string/add_note"
             android:gravity="top"
-            android:background="@null"/>
+            android:background="@null" />
 
     </RelativeLayout>
 
