--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -54,4 +54,15 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="NGS_Date_Picker_Dialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/light_blue</item>
+        <item name="android:buttonBarNegativeButtonStyle">
+            @style/NGS_Date_Picker_Dialog.ButtonStyle</item>
+        <item name="android:buttonBarNeutralButtonStyle">
+            @style/NGS_Date_Picker_Dialog.ButtonStyle</item>
+    </style>
+
+    <style name="NGS_Date_Picker_Dialog.ButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/light_blue</item>
+    </style>
 </resources>
